--- a/js-extensions/package.json
+++ b/js-extensions/package.json
@@ -19,33 +19,36 @@
   "author": "Tom Fennelly <tom.fennelly@gmail.com> (https://github.com/tfennelly)",
   "license": "MIT",
   "devDependencies": {
-    "@jenkins-cd/eslint-config-jenkins": "0.0.2",
+    "@jenkins-cd/eslint-config-jenkins": "0.0.3-thor4",
     "@jenkins-cd/js-builder": "0.0.40",
     "@jenkins-cd/js-modules": "0.0.8",
     "@jenkins-cd/js-test": "1.2.3",
-    "babel-cli": "6.10.1",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-cli": "6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
-    "eslint": "2.8.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint": "^3.7.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^2.2.0",
-    "jsdom": "^9.5.0",
-    "react": "^0.14.7 || ^15.0.0",
+    "gulp-mocha": "^3.0.1",
+    "jsdom": "^9.6.0",
+    "react": "^15.3.2",
     "react-addons-test-utils": "15.3.2",
-    "react-dom": "^0.14.7 || ^15.0.0"
+    "react-dom": "^15.3.2"
   },
   "dependencies": {
-    "js-yaml": "^3.6.0",
+    "js-yaml": "^3.6.1",
     "envify": "3.4.1"
   },
   "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0",
-    "react-dom": "^0.14.7 || ^15.0.0"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
