--- a/blueocean-personalization/.eslintrc
+++ b/blueocean-personalization/.eslintrc
@@ -1,7 +1,16 @@
 {
   "extends": "@jenkins-cd/jenkins/react",
   "rules": {
-    "react/jsx-no-bind": 0,
+    "react/jsx-no-bind": 1,
+    "jsx-a11y/label-has-for": 1,
+    "jsx-a11y/no-static-element-interactions": 1,
+    "no-return-assign": 1,
+    "react/jsx-indent": 1,
+    "no-underscore-dangle": 1,
+    "global-require": 1,
+    "prefer-spread": 1,
+    "react/no-unescaped-entities": 1,
+    "no-continue": 1,
     "no-unused-vars": [2, {"varsIgnorePattern": "^React$"}],
     "max-len": [1, 160, 4]
   }
