--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -42,6 +42,7 @@
     "@jenkins-cd/js-extensions": "0.0.25",
     "@jenkins-cd/js-modules": "0.0.8",
     "@jenkins-cd/sse-gateway": "0.0.9",
+    "debug": "^2.2.0",
     "es6-promise": "4.0.4",
     "immutable": "3.8.1",
     "isomorphic-fetch": "2.2.1",
