--- a/js-extensions/package.json
+++ b/js-extensions/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.3-thor4",
-    "@jenkins-cd/js-builder": "0.0.40",
+    "@jenkins-cd/js-builder": "0.0.40-thor",
     "@jenkins-cd/js-modules": "0.0.8",
     "@jenkins-cd/js-test": "1.2.3",
     "babel-cli": "6.16.0",
