--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,20 @@
             </configuration>
         </plugin>
 
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <systemProperties>
+                    <property>
+                        <name>hudson.udp</name>
+                        <value>33849</value>
+                    </property>
+                </systemProperties>
+                <reuseForks>true</reuseForks>
+                <forkCount>${concurrency}</forkCount>
+                <argLine>${argLine}</argLine>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
